# RSS-summarizer

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-images.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23210f45b4ac_initial_tables.py
backend/app/: broadcast.py  celery_utils.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py  worker.py
backend/app/routers/: articles.py  feeds.py  ws.py
backend/app/services/: summarizer.py
backend/tests/: conftest.py  test_articles.py  test_feeds.py  test_healthcheck.py  test_summarizer.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts  useWebsocket.ts
k8s/: backend-deployment.yml  backend-service.yml  beat.yml  configmap.yml  frontend-service.yml  secrets-example.yml  secrets.yml  worker-deployment.yml
k8s/base/: backend-deployment.yml  frontend-deployment.yml  ingress.yml  kustomization.yml  network-policies.yml  postgres-deployment.yml  redis-deployment.yml
k8s/overlays/dev/: kustomization.yml
k8s/overlays/prod/: kustomization.yml
monitoring/: prometheus.yml  promtail.yml
