[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{name = "Konrad Bakowski"}]
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.0,<0.136.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.1.0,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.25.0,<1.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis[asyncio] (>=7.3.0,<8.0.0)",
    "openai (>=2.26.0,<3.0.0)",
    "websockets (>=16.0,<17.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
